--- a/siwiki/ChangeLog
+++ b/siwiki/ChangeLog
@@ -1,3 +1,8 @@
+09-04-28 Stefan Isak <stefanisak@gmail.com>
+	* switched version to 1.0.1 
+	* fixed some issues with link panel in ie and webkit browsers
+	* changed regex for linknames
+
 09-04-16 Stefan Isak <stefanisak@gmail.com>
 	* version 0.1.0
 	* fixed some issues with link panel in ie
