--- a/siwiki/ChangeLog
+++ b/siwiki/ChangeLog
@@ -1,3 +1,16 @@
+15-06-10 Stefan Isak <stefanisak@gmail.com>
+	* fixed some smaller bugs
+	* added flexform to enable/disable filemanager
+	* added latest updates in a first simple version
+
+10-06-10 Stefan Isak <stefanisak@gmail.com>
+	* improved filemanager panel
+	* added loading status and error codes for filemanager
+
+09-05-28 Stefan Isak <stefanisak@gmail.com>
+	* added functionality to create articles without links
+	* first prototyping filemanager panel
+
 09-04-28 Stefan Isak <stefanisak@gmail.com>
 	* switched version to 1.0.1 
 	* fixed some issues with link panel in ie and webkit browsers
