* switched version to 1.0.6
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/siwiki/trunk@21920 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/siwiki/ChangeLog
+++ b/siwiki/ChangeLog
@@ -1,3 +1,8 @@
+30-06-10 Stefan Isak <stefanisak@gmail.com>
+	* added tag feature
+	* added diff view to notification mails
+	* some bugfixes
+
 15-06-10 Stefan Isak <stefanisak@gmail.com>
 	* fixed some smaller bugs
 	* added flexform to enable/disable filemanager
